--- a/index1.html
+++ b/index1.html
@@ -14,15 +14,16 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style1.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>workflow-card</title>
+    
+   
   </head>
   <body>
     <section class="workflow-section" id="workflow-section">
       <div class="container">
         <div class="row text-center mb-5">
-          <div class="col-12">
+          <div class="col-lg-12">
             <h3 class="subheading">WORKFLOW</h3>
-            <h1 class="title">Amazing Results Through Smart Processes!</h1>
+            <h1 class="title">Unmatched Results Through <br> Smart Strategies</h1>
           </div>
         </div>
 
